# library-management-system-db-course

./: .env.example  .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml  tauri.conf.json
assets/tauri-first-page/: index.html
prisma/: schema.prisma
prisma/migrations/20231126095917_init/: migration.sql
sql/user/: delete_by_id.sql  insert.sql  select_by_id.sql  select_by_name.sql  update_by_id.sql
src/: db_extra.rs  error.rs  main.rs  routes.rs  tauri.rs  types.rs  utils.rs
src/controllers/: auth.rs  mod.rs  spa_static.rs
src/models/: auth.rs
