[package]
name = "library-management-system"
version = "0.1.0"
description = "DB course homework."
edition = "2021"
default-run = "library-management-system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
axum = "0.6.20"
rust-embed = "8.0.0"
mime_guess = "2.0.4"
tracing-subscriber = "0.3.18"
tokio = { version = "1.34.0", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
