[package]
name = "library-management-system"
version = "0.1.0"
description = "DB course homework."
edition = "2021"
default-run = "library-management-system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
axum = { version = "0.6.20", features = ["headers"] }
rust-embed = "8.0.0"
mime_guess = "2.0.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.34.0", features = ["full"] }
pbkdf2 = "0.12.2"
bcrypt = "0.15.0"
once_cell = "1.18.0"
async-trait = "0.1.74"
jsonwebtoken = "9.1.0"
axum-extra = { version = "0.8.0", features = [] }
anyhow = "1.0.75"
sqlx = { version = "0.6.3", features = [
  "chrono",
  "runtime-tokio-native-tls",
  "time",
  "uuid",
  "mssql",
  "json",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
